# lab6_var22

./: .gitignore  CMakeLists.txt  readme.md
src/: main.cpp
